--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@thumbmarkjs/thumbmarkjs": "^0.16.1",
