Added post status component for loading and error handling

--- a/config/post.config.json
+++ b/config/post.config.json
@@ -1,5 +1,6 @@
 {
   "defaultExpirationDays": 30,
   "initialTagDisplayLimit": 3,
-  "newPostTagLimit": 5
+  "newPostTagLimit": 5,
+  "postLoadingTimeout": 5000
 }
