Added setting to limit the max length of post content

--- a/config/post.config.json
+++ b/config/post.config.json
@@ -2,5 +2,6 @@
   "defaultExpirationDays": 30,
   "initialTagDisplayLimit": 3,
   "newPostTagLimit": 5,
-  "postLoadingTimeout": 5000
+  "postLoadingTimeout": 5000,
+  "maxPostContentLength": 300
 }
